[SymForce] Finish removing os.path
Fixes symforce-org/symforce#96

Topic: sf-no-os-path
GitOrigin-RevId: 1e046d39cdff4e982a98d732e70a965cce9e0ccb

--- a/notebooks/tutorials/codegen_tutorial.ipynb
+++ b/notebooks/tutorials/codegen_tutorial.ipynb
@@ -34,7 +34,6 @@
    "source": [
     "# Setup\n",
     "import numpy as np\n",
-    "import os\n",
     "import symforce\n",
     "\n",
     "symforce.set_symbolic_api(\"symengine\")\n",
@@ -108,7 +107,7 @@
     "\n",
     "print(\"Files generated in {}:\\n\".format(az_el_codegen_data.output_dir))\n",
     "for f in az_el_codegen_data.generated_files:\n",
-    "    print(\"  |- {}\".format(os.path.relpath(f, az_el_codegen_data.output_dir)))\n",
+    "    print(\"  |- {}\".format(f.relative_to(az_el_codegen_data.output_dir)))\n",
     "\n",
     "display_code_file(az_el_codegen_data.generated_files[0], \"C++\")"
    ]
@@ -282,7 +281,7 @@
     "# Print what we generated\n",
     "print(\"Files generated in {}:\\n\".format(double_pendulum_data.output_dir))\n",
     "for f in double_pendulum_data.generated_files:\n",
-    "    print(\"  |- {}\".format(os.path.relpath(f, double_pendulum_data.output_dir)))"
+    "    print(\"  |- {}\".format(f.relative_to(double_pendulum_data.output_dir)))"
    ]
   },
   {
@@ -325,7 +324,7 @@
     "# generated.\n",
     "print(\"Files generated in {}:\\n\".format(double_pendulum_values_data.output_dir))\n",
     "for f in double_pendulum_values_data.generated_files:\n",
-    "    print(\"  |- {}\".format(os.path.relpath(f, double_pendulum_values_data.output_dir)))\n",
+    "    print(\"  |- {}\".format(f.relative_to(double_pendulum_values_data.output_dir)))\n",
     "\n",
     "display_code_file(\n",
     "    double_pendulum_values_data.function_dir / \"double_pendulum.h\",\n",
@@ -360,7 +359,7 @@
     "\n",
     "print(\"Files generated in {}:\\n\".format(double_pendulum_python_data.output_dir))\n",
     "for f in double_pendulum_python_data.generated_files:\n",
-    "    print(\"  |- {}\".format(os.path.relpath(f, double_pendulum_python_data.output_dir)))\n",
+    "    print(\"  |- {}\".format(f.relative_to(double_pendulum_python_data.output_dir)))\n",
     "\n",
     "display_code_file(\n",
     "    double_pendulum_python_data.function_dir / \"double_pendulum.py\",\n",
